Fix #491 - Panel Title does not overlap back arrow on long text strings

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -190,6 +190,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  padding: 0 var(--spacingXl);
 }
 
 .fx-relay-panel-header-btn-back {
@@ -220,6 +221,10 @@
   font-size: var(--fontSizeTitle3xs);
   font-family: var(--fontStackFirefox);
   font-weight: 500;
+  text-align: center;
+  line-height: 1.2;
+  width: 100%;
+  
 }
 
 /* Sign Up/In Panel */
